<resources>
    <string name="app_name">Chat</string>
    <string name="signup_login">Уже есть аккаунт?</string>
    <string name="signup_sign_up">Зарегистрироваться</string>
    <string name="signup_email">Введите e-mail</string>
    <string name="signup_password">Введите пароль</string>
    <string name="signup_display_name">Введите логин</string>
    <string name="signup_appname">Одногруппники</string>
    <string name="login_text">Войдите в аккаунт</string>
    <string name="login_email">Введите e-mail</string>
    <string name="login_text_register">Нет аккаунта?</string>
    <string name="login_register">Зарегистрироваться</string>
    <string name="login_password">Введите пароль</string>
    <string name="login_password_recovery">Восстановить пароль</string>
    <string name="login_in_account">Войти</string>
    <string name="main_text">Вы вошли в аккаунт!</string>
    <string name="main_logout">Выйти</string>
    <string name="forgot_password_email">Введите e-mail</string>
    <string name="forgot_password_text">Восстановить пароль</string>
    <string name="forgot_password_btn">Дальше</string>
    <string name="nav_menu_chat_list">Чаты</string>
    <string name="nav_menu_settings">Настройки</string>
    <string name="nav_menu_logout">Выйти</string>
    <string name="open_nav">Открыть</string>
    <string name="close_nav">Закрыть</string>
    <string name="fragment_settings_change_display_name">Изменить ник\nНажмите, чтобы изменить ник</string>
    <string name="fragment_settings_cardview_account_tv_account">Аккаунт</string>
    <string name="fragment_settings_account_tv_status">В сети</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>