<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/blue">

        <TextView
            android:id="@+id/fragment_settings_tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/fragment_settings_account_tv_status"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/fragment_settings_tv_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:text="User"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp">

        <TextView
            android:id="@+id/fragment_settings_cardview_account_tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/fragment_settings_cardview_account_tv_account"
            android:textColor="@color/blue"
            android:textSize="17dp"/>

        <Button
            android:id="@+id/fragment_settings_change_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:gravity="fill"
            android:lines="2"
            android:paddingStart="30dp"
            android:text="@string/fragment_settings_change_display_name"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:textSize="17dp" />

    </androidx.cardview.widget.CardView>

</FrameLayout>